Refactor local dns service provider